--- a/pxufont.sty
+++ b/pxufont.sty
@@ -1,7 +1,7 @@
 %%
 %% This is file 'pxufont.sty'.
 %% 
-%% Copyright (c) 2019 Takayuki YATO (aka. "ZR")
+%% Copyright (c) 2017-2019 Takayuki YATO (aka. "ZR")
 %%   GitHub:   https://github.com/zr-tex8r
 %%   Twitter:  @zr_tex8r
 %%
@@ -10,7 +10,7 @@
 
 %% package declaration
 \NeedsTeXFormat{pLaTeX2e}
-\ProvidesPackage{pxufont}[2019/02/15 v0.4-pre]
+\ProvidesPackage{pxufont}[2019/02/16 v0.4]
 \def\pxuf@pkgname{pxufont}
 %
 \providecommand\bxDebug[1]{}
