--- a/pxufont.sty
+++ b/pxufont.sty
@@ -10,7 +10,7 @@
 
 %% package declaration
 \NeedsTeXFormat{pLaTeX2e}
-\ProvidesPackage{pxufont}[2019/02/16 v0.4]
+\ProvidesPackage{pxufont}[2019/02/17 v0.5-pre]
 \def\pxuf@pkgname{pxufont}
 %
 \providecommand\bxDebug[1]{}
@@ -23,6 +23,12 @@
 %% unique tokens
 \def\pxuf@end{\pxuf@end@}
 \def\pxuf@mt{\pxuf@mt@}
+
+%% switch 'pxuf@use@ruby'
+\newif\ifpxuf@use@ruby
+\ifx t\pxufontUseRubyFont
+  \pxuf@use@rubytrue
+\fi
 
 %% \pxuf@split{<at>}{<target>}
 \def\pxuf@split#1#2{%
@@ -93,6 +99,7 @@
   \expandafter\expandafter\expandafter\pxuf@parse@spec@a
       \csname#1\endcsname}%
 \def\pxuf@parse@spec@a#1{%
+\bxDebug{ufont:\string#1}%
   \expandafter\pxuf@parse@spec@b\string#1<-><$}
 \def\pxuf@parse@spec@b#1<->#2<#3${%
   \pxuf@parse@spec@c#2**$}% #2=font-info for <->
@@ -116,12 +123,14 @@
 \pxuf@edef@detokenized\pxuf@@s{s}
 
 %% \pxuf@change@tfm
-\def\pxuf@tmpb#1/#2/#3/#4\pxuf@end{%
+\pxuf@edef@detokenized\pxuf@tmpa{exp/ruby/nml}
+\def\pxuf@tmpb#1/#2/#3\pxuf@end{%
   \def\pxuf@change@tfm{%
-    \pxuf@change@tfm@a{#2}{#4}%
-    \pxuf@change@tfm@a{#3}{#4}}
-}\def\pxuf@tmpa{/exp/ruby/nml}
-\expandafter\pxuf@tmpb\meaning\pxuf@tmpa\pxuf@end
+    \pxuf@change@tfm@a{#1}{#3}%
+    \ifpxuf@use@ruby\else
+      \pxuf@change@tfm@a{#2}{#3}
+    \fi}
+}\expandafter\pxuf@tmpb\pxuf@tmpa\pxuf@end
 \def\pxuf@change@tfm@a#1#2{%
   \pxuf@split{#1}\pxuf@tfm\ifx\pxuf@pre\relax\else
     \edef\pxuf@tfm{\pxuf@pre#2\pxuf@post}%
@@ -132,7 +141,7 @@
 \bxDebug{ufont:process(#1;#2/#3/#4/#5)}%
   \pxuf@parse@spec{#2/#3/#4/#5}%
   \ifx\pxuf@tfm\relax\else
-\bxDebug{spec=\pxuf@scale:\pxuf@tfm}%
+\bxDebug{ufont:spec=\pxuf@scale:\pxuf@tfm}%
     \DeclareFontShape{#2}{#3}{#4}{#5}{<->%
         \ifdim\pxuf@scale\p@=\p@\else s*[\pxuf@scale]\fi
         zu-\pxuf@tfm}{}%
