00generate.pl: Create extra TFMs

--- a/pxufont-ruby.sty
+++ b/pxufont-ruby.sty
@@ -15,8 +15,10 @@
 
 %--------------------------------------- main
 
-\let\pxufontUseRubyFont=t
-\RequirePackage{pxufont}\relax
+\@ifpackageloaded{pxufont}{}{%else
+  \let\pxufontUseRubyFont=t
+  \RequirePackage{pxufont}\relax
+}
 
 %--------------------------------------- done
 \endinput
