--- a/pxufont-ruby.sty
+++ b/pxufont-ruby.sty
@@ -10,7 +10,7 @@
 
 %% package declaration
 \NeedsTeXFormat{pLaTeX2e}
-\ProvidesPackage{pxufont-ruby}[2019/02/17 v0.5-pre]
+\ProvidesPackage{pxufont-ruby}[2019/02/28 v0.5]
 \def\pxuf@rb@pkgname{pxufont-ruby}
 
 %--------------------------------------- main
