--- a/pxufont.sty
+++ b/pxufont.sty
@@ -10,7 +10,7 @@
 
 %% package declaration
 \NeedsTeXFormat{pLaTeX2e}
-\ProvidesPackage{pxufont}[2019/02/17 v0.5-pre]
+\ProvidesPackage{pxufont}[2019/02/28 v0.5]
 \def\pxuf@pkgname{pxufont}
 %
 \providecommand\bxDebug[1]{}
