--- a/pxufont-ruby.sty
+++ b/pxufont-ruby.sty
@@ -1,7 +1,7 @@
 %%
 %% This is file 'pxufont-ruby.sty'.
-%% 
-%% Copyright (c) 2017-2019 Takayuki YATO (aka. "ZR")
+%%
+%% Copyright (c) 2017-2020 Takayuki YATO (aka. "ZR")
 %%   GitHub:   https://github.com/zr-tex8r
 %%   Twitter:  @zr_tex8r
 %%
@@ -10,7 +10,7 @@
 
 %% package declaration
 \NeedsTeXFormat{pLaTeX2e}
-\ProvidesPackage{pxufont-ruby}[2019/02/28 v0.5]
+\ProvidesPackage{pxufont-ruby}[2020/02/08 v0.5a-pre]
 \def\pxuf@rb@pkgname{pxufont-ruby}
 
 %--------------------------------------- main
