--- a/pxufont-ruby.sty
+++ b/pxufont-ruby.sty
@@ -10,7 +10,7 @@
 
 %% package declaration
 \NeedsTeXFormat{pLaTeX2e}
-\ProvidesPackage{pxufont-ruby}[2020/02/08 v0.5a-pre]
+\ProvidesPackage{pxufont-ruby}[2020/02/09 v0.6]
 \def\pxuf@rb@pkgname{pxufont-ruby}
 
 %--------------------------------------- main
